--- a/priv/gettext/lv/LC_MESSAGES/default.po
+++ b/priv/gettext/lv/LC_MESSAGES/default.po
@@ -743,3 +743,8 @@ msgstr "Lai rakstītu atsauksmi, jums ir jāpiesakās"
 #, elixir-autogen, elixir-format
 msgid "You must be logged in"
 msgstr "Jums ir jāpiesakās"
+
+#: lib/bookify_web/controllers/auth_controller.ex:27
+#, elixir-autogen, elixir-format, fuzzy
+msgid "Signed in successfully!"
+msgstr "Ierakstīšanās veiksmīga!"
