Translated error messages

--- a/priv/gettext/lv/LC_MESSAGES/errors.po
+++ b/priv/gettext/lv/LC_MESSAGES/errors.po
@@ -12,100 +12,100 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100 != 11 ? 0 : n != 0 ? 1 : 2);\n"
 
 msgid "can't be blank"
-msgstr ""
+msgstr "nevar būt tukšs"
 
 msgid "has already been taken"
-msgstr ""
+msgstr "jau ir aizņemts"
 
 msgid "is invalid"
-msgstr ""
+msgstr "ir nederīgs"
 
 msgid "must be accepted"
-msgstr ""
+msgstr "jāpieņem"
 
 msgid "has invalid format"
-msgstr ""
+msgstr "ir ar nederīgu formātu"
 
 msgid "has an invalid entry"
-msgstr ""
+msgstr "ir ar nederīgu ierakstu"
 
 msgid "is reserved"
-msgstr ""
+msgstr "ir rezervēts"
 
 msgid "does not match confirmation"
-msgstr ""
+msgstr "nepiesakrīt ar apstiprinājumu"
 
 msgid "is still associated with this entry"
-msgstr ""
+msgstr "vēl joprojām saistīts ar šo ierakstu"
 
 msgid "are still associated with this entry"
-msgstr ""
+msgstr "vēl joprojām saistīti ar šo ierakstu"
 
 msgid "should have %{count} item(s)"
 msgid_plural "should have %{count} item(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt %{count} vienībai"
+msgstr[1] "vajadzētu būt %{count} vienībām"
+msgstr[2] "vajadzētu būt %{count} vienībām"
 
 msgid "should be %{count} character(s)"
 msgid_plural "should be %{count} character(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt %{count} rakstzīmei"
+msgstr[1] "vajadzētu būt %{count} rakstzīmēm"
+msgstr[2] "vajadzētu būt %{count} rakstzīmēm"
 
 msgid "should be %{count} byte(s)"
 msgid_plural "should be %{count} byte(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt %{count} baitam"
+msgstr[1] "vajadzētu būt %{count} baitiem"
+msgstr[2] "vajadzētu būt %{count} baitiem"
 
 msgid "should have at least %{count} item(s)"
 msgid_plural "should have at least %{count} item(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt vismaz %{count} vienībai"
+msgstr[1] "vajadzētu būt vismaz %{count} vienībām"
+msgstr[2] "vajadzētu būt vismaz %{count} vienībām"
 
 msgid "should be at least %{count} character(s)"
 msgid_plural "should be at least %{count} character(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt vismaz %{count} rakstzīmei"
+msgstr[1] "vajadzētu būt vismaz %{count} rakstzīmēm"
+msgstr[2] "vajadzētu būt vismaz %{count} rakstzīmēm"
 
 msgid "should be at least %{count} byte(s)"
 msgid_plural "should be at least %{count} byte(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt vismaz %{count} baitam"
+msgstr[1] "vajadzētu būt vismaz %{count} baitiem"
+msgstr[2] "vajadzētu būt vismaz %{count} baitiem"
 
 msgid "should have at most %{count} item(s)"
 msgid_plural "should have at most %{count} item(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt ne vairāk kā %{count} vienībai"
+msgstr[1] "vajadzētu būt ne vairāk kā %{count} vienībām"
+msgstr[2] "vajadzētu būt ne vairāk kā %{count} vienībām"
 
 msgid "should be at most %{count} character(s)"
 msgid_plural "should be at most %{count} character(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt ne vairāk kā %{count} rakstzīmei"
+msgstr[1] "vajadzētu būt ne vairāk kā %{count} rakstzīmēm"
+msgstr[2] "vajadzētu būt ne vairāk kā %{count} rakstzīmēm"
 
 msgid "should be at most %{count} byte(s)"
 msgid_plural "should be at most %{count} byte(s)"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "vajadzētu būt ne vairāk kā %{count} baitam"
+msgstr[1] "vajadzētu būt ne vairāk kā %{count} baitiem"
+msgstr[2] "vajadzētu būt ne vairāk kā %{count} baitiem"
 
 msgid "must be less than %{number}"
-msgstr ""
+msgstr "jābūt mazākam par %{number}"
 
 msgid "must be greater than %{number}"
-msgstr ""
+msgstr "jābūt lielākam par %{number}"
 
 msgid "must be less than or equal to %{number}"
-msgstr ""
+msgstr "jābūt mazākam vai vienādam ar %{number}"
 
 msgid "must be greater than or equal to %{number}"
-msgstr ""
+msgstr "jābūt lielākam vai vienādam ar %{number}"
 
 msgid "must be equal to %{number}"
-msgstr ""
+msgstr "jābūt vienādam ar %{number}"
